@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<configuration>
+  <runtime>
+    <developmentMode developerInstallation="true"/>
+  </runtime>
+</configuration>
